# james

./: .eqc_ci  .gitmodules  .travis.yml  LICENSE  README.md
agent/: Makefile.am  autogen.sh  cache.cpp  cache.hpp  configure.ac  httpanalysis.cpp  httpanalysis.hpp  james.cpp  james.hpp  package.cpp  package.hpp  refs.cpp  refs.hpp  sock.cpp  sock.hpp  trap.cpp  trap.hpp  utils.cpp  utils.hpp
res/: iface.erl  prop_fix.txt  utils.erl
res2/: iface.erl  prop_fix.txt
res3/: client.erl  fixes.txt  httpanalysis.cpp  iface.erl  james.cpp  parser_newstruct.erl  prop_fix.txt
server/: arc_sorter.erl  check_fsm_gen.erl  combinator.erl  dep_fsm_gen.erl  depth_calculator.erl  dia_utils.erl  diagram_tool.erl  eqc_fsm_gen.erl  html_utils.erl  integer_list.erl  islands.erl  lqueue.erl  lqueue_eqc.erl  model_gen.erl  parser_newstruct.erl  parser_utils.erl  path_utils.erl  records.hrl  server.erl  string_combinator.erl  template_gen.erl  trace_gc.erl  used_dep_gen.erl  utils.erl
test/: depth_calculator_eqc.erl  lqueue_eqc.erl  trace_gc_eqc.erl
travis/: prepare.sh  test.erl  test.sh
